<resources>
    <string name="app_name">Email App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="registrar">Registrar</string>
    <string name="login_button_description">Login Button</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_passwords">Forgot Password</string>
    <string name="loginbutton">Login</string>
    <string name="back_to_main">Back to Main</string>
    <string name="login_app">Login</string>
</resources>
